# voxtral-mini-realtime-rs

./: CMakeLists.txt  Cargo.toml
include/: voxtral.h
scripts/: download-voxtral-model.sh
src/: ffi.rs  lib.rs
